gitops/apps/ngo-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngo-service
  namespace: ngo-service
  labels:
    app: ngo-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngo-service
  template:
    metadata:
      labels:
        app: ngo-service
        tier: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: ngo-service
          image: 987168675043.dkr.ecr.us-east-1.amazonaws.com/solidarytech/ngo-service:dc30142d4cd88819cc4d11a0455c5570261ba423
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            tcpSocket:
              port: 8002
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
